--- a/contactinfo.html
+++ b/contactinfo.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>My Info</title> 
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Try To Contact Me By Following Ways</h1>
@@ -16,7 +17,7 @@
         <label>Email:</label>
         <input type="email" name="yourEmail"><br>
         <label>Message:</label><br>
-        <textarea name="text" name="yourMessage" id="" cols="30" rows="8"></textarea><br>
+        <textarea name="yourMessage" id="" cols="30" rows="8"></textarea><br>
         <input type="submit">
     </form>
 </body>
